[package]
name = "ckb-ledger"
version = "0.1.0"
authors = ["John Ericson <git@JohnEricson.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = "=0.5.0"

bitflags = "1.2.1"
bitcoin_hashes = "0.3.2"
byteorder = "1.3.4"
ckb-sdk = { path = "../ckb-sdk" }
ckb-crypto = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee", features = ["secp"] }
ckb-hash = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
ckb-types = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
either = "1.5.3"
failure = "0.1.5"

ledger-apdu = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "b7e27d51f76060f29cd0cc6a995e07b784aa5208"}
ledger-transport-hid = { git = "https://github.com/obsidiansystems/ledger-rs", rev = "b7e27d51f76060f29cd0cc6a995e07b784aa5208"}

log = "0.4.6"
secp256k1 = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
