[package]
name = "cli-test"
version = "0.33.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
tempfile = "3.0"
log = "0.4"
env_logger = "0.6"
toml = "0.5.0"
serde_yaml = "0.8.9"
ckb-sdk = { path = "../ckb-sdk" }
ckb-types = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
ckb-app-config = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
ckb-chain-spec = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
ckb-crypto = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee", features = ["secp"] }
ckb-hash = { git = "https://github.com/obsidiansystems/ckb", rev = "c5c935e1a31e3ef407a725d833aef4726c8f5eee" }
regex = "1.1.6"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
